# aglet

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: Config.cmake.in
cmake/Hunter/: config.cmake
cmake/modules/: CommonFindMod.cmake  FindAndroid.cmake  FindEGL.cmake  FindLog.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake
lib/aglet/: CMakeLists.txt  EGLContext.cpp  EGLContext.h  GLContext.cpp  GLContext.h  GLContextAndroid.cpp  GLContextAndroid.h  GLContextIOS.h  GLContextIOS.mm  GLFWContext.cpp  GLFWContext.h  TAGS  aglet.h  aglet_assert.h  gl_includes.h
test/: CMakeLists.txt  main.cpp
test/gpu2cpu/: CMakeLists.txt  main.cpp
test/hello/: CMakeLists.txt  main.cpp
